src/test/resources/valid_programs/for_stm_no_iteration.notc
void main() {
    for (;false;)
        printString("Not printed");
}
