src/test/resources/semantic_errors/readString_as_double_arg.notc
void takesDouble(double d) {
}

void main() {
    takesDouble(readString());
}
